<resources>
    <string name="app_name">BoostRunner</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="save">SAVE</string>
    <string name="hint_wiegt">weight</string>
    <string name="btn_sign_up">Register</string>
    <string name="hint_Length">height</string>
    <string name="hint_name">name</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="alert_title">Enter vaild input</string>
    <string name="alert_msg">Enter vaild  height  and weight </string>
    <string name="title_activity_running">BoostRunner</string>
    <string name="error">Error</string>
    <string name="male_female">Please choose if you are male or female</string>
    <string name="network_unavailable_message">Network is unavailabel</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="hint_age">age</string>
    <string name="title_Workouts">Workouts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gps_disabled_msg">GPS is disabled in your device, Please Enable your GPS</string>
    <string name="gps_disabled_title">GPS disabled</string>
    <string name="dissmiss">Quit with out saving</string>
    <string name="dissmiss_message">Are you sure that you dont want to save this workout workout session? This can not be undone</string>
    <string name="send_to">Workout session saved. Share it  with</string>
    <string name="share_txt">\"i have just completed a running session with this new app BoostRunner</string>
    <string name="gps_signal">GPS signal Very weak</string>
    <string name="gps_signal_msg">Your GPS signal is very weak please enable your gps and network connection to get BoostRunner to track your activity</string>
    <string name="distance">0,00</string>
    <string name="distance_label">DISTANCE(KM)</string>
    <string name="caloris">0</string>
    <string name="caloris_label">CALORIS(CAL)</string>
    <string name="pause_button">PAUSE</string>
    <string name="stop_button">STOP</string>
    <string name="start_button">START</string>
</resources>
