<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/activity_register"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.my222au.boostrunner.UI.MainActivity"
    >




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="50dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_name"
            android:textColor="#000000"
            android:textSize="16sp"/>

            <EditText
                android:id="@+id/input_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="text"
                android:singleLine="true">

            </EditText>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_wiegt"
            android:textSize="16sp"
            android:textColor="#000000"/>
            <EditText
                android:id="@+id/input_weight_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="numberSigned|numberDecimal"
                android:singleLine="true"/>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/hint_Length"
              android:textColor="#000000"
              android:textSize="16sp"/>


            <EditText
                android:id="@+id/input_height_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/hint_Length"
                android:inputType="numberDecimal"
                android:singleLine="true"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_age"
            android:textSize="16sp"
            android:textColor="#000000"/>

            <EditText
                android:id="@+id/input_age_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:hint="@string/hint_age"

                android:inputType="number"
                android:singleLine="true"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:id="@+id/radibtn_group_edit">

                <RadioButton
                    android:id="@+id/radiobtn_male_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male_label"
                    >

                </RadioButton>


                <RadioButton
                    android:id="@+id/radiobtn_female_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:text="@string/female_label">

                </RadioButton>
            </RadioGroup>
        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save_button"

        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"/>
    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
